src/k8s-client/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-server
  template:
    metadata:
      labels:
        app: api-server
        tier: backend
    spec:
      serviceAccountName: default
      containers:
        - image: <REGISTRY>/<NAME>:<TAG>
          name: api-server
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
