src/k8s-client/deploy/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: api-server
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    app: api-server
  type: ClusterIP
