src/k8s-client/deploy/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: api-server-route
spec:
  host: <Host>
  port:
    targetPort: 80
  to:
    kind: Service
    name: api-server
